# packages/auth/src/openapi/types.ts
@@ -1,0 +1,3 @@
+import { components as RSComponents } from './generated/resource-server-types'
+
+export type TokenInfo = RSComponents['schemas']['token-info']
